samples/_failures_safe/1761461577_ccf560_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40443860.c: In function ‘main’:
./samples/SAFE/__tmp_40443860.c:141:5: error: expected declaration or statement at end of input
  141 |     printf("Total log entries: %zu\n", logs.count);
      |     ^~~~~~
